[project]
name = "aisert"
version = "0.0.1"
dependencies = [
    "jsonschema>=4.0.0",
    "sentence-transformers>=2.0.0",
    "tiktoken>=0.5.0",
    "transformers>=4.0.0",
    "anthropic>=0.3.0",
    "pydantic>=2.0.0",
    "torch>=1.9.0"
]
authors = [
  { name="haipad", email="hariprayush@gmail.com" },
]
description = "An assertion library for Python that provides a simple and powerful way to write assertions for AI response in your code."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/haipad/aisert"
Issues = "https://github.com/haipad/aisert/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[library-dependencies]
